# Hackathon---Real-time-rPPG-signal-

./: .env  .gitignore  README.md  health_dashboard.py  music_player.py  opencv_widget.py  speedometer.py
python_demo/: README.md  client.py  pyproject.toml  record.py  requirements.txt
