[project]
name = "python"
version = "0.1.0"
description = "Simple Python WebSocket client that streams timestamped image frames to a backend."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "opencv-python>=4.12.0.88",
    "orjson>=3.11.4",
    "pillow>=11.3.0",
    "websockets>=15.0.1",
    "python-dotenv>=1.0.1",
    "pyqt5>=5.15.11",
]
